[gd_scene load_steps=11 format=3 uid="uid://bx0yw1rkqh7pp"]

[ext_resource type="Script" uid="uid://bg5cpijcglffn" path="res://ui/MainMenu.gd" id="1_mainmenu"]
[ext_resource type="Theme" uid="uid://dyj50sedyht6" path="res://ui/MainMenuTheme.tres" id="2_theme"]
[ext_resource type="Texture2D" uid="uid://dc5l880r117is" path="res://content/Graphics/typo.png" id="3_logo"]
[ext_resource type="Texture2D" uid="uid://c6y464f7j6an4" path="res://content/Graphics/Icons/White/1x/forward.png" id="4_uwsby"]
[ext_resource type="Texture2D" uid="uid://bs4pa4bxjqrul" path="res://content/Graphics/Icons/White/1x/video.png" id="5_uvwf2"]
[ext_resource type="Texture2D" uid="uid://dlp4lr8txd2o6" path="res://content/Graphics/Icons/White/1x/gear.png" id="6_youui"]
[ext_resource type="Texture2D" uid="uid://cpgl24tb6wst3" path="res://content/Graphics/Icons/White/1x/information.png" id="7_58pe3"]
[ext_resource type="Texture2D" uid="uid://c8dnyquj3aexb" path="res://content/Graphics/Icons/White/1x/exitRight.png" id="8_g6r01"]

[sub_resource type="Animation" id="Animation_1"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1"]
_data = {
&"fade_in": SubResource("Animation_1")
}

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_mainmenu")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.1, 0.15, 1)

[node name="BackgroundPattern" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.2, 0.35, 0.4)

[node name="ParticleSystem" type="CPUParticles2D" parent="."]
position = Vector2(640, 360)
amount = 80
lifetime = 12.0
direction = Vector2(0, 1)
gravity = Vector2(0, 15)
initial_velocity_min = 10.0
initial_velocity_max = 30.0
scale_amount_min = 0.05
scale_amount_max = 0.25
color = Color(0.3, 0.7, 0.9, 0.4)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")

[node name="MainContainer" type="HBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftPanel" type="VBoxContainer" parent="UI/MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6

[node name="TitleContainer" type="VBoxContainer" parent="UI/MainContainer/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="LogoImage" type="TextureRect" parent="UI/MainContainer/LeftPanel/TitleContainer"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
texture = ExtResource("3_logo")
expand_mode = 1
stretch_mode = 5

[node name="GameTitle" type="Label" parent="UI/MainContainer/LeftPanel/TitleContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Glitch Dimension"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Subtitle" type="Label" parent="UI/MainContainer/LeftPanel/TitleContainer"]
visible = false
modulate = Color(0.8, 0.8, 0.8, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Broken Reality"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightPanel" type="VBoxContainer" parent="UI/MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4

[node name="MenuContainer" type="VBoxContainer" parent="UI/MainContainer/RightPanel"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="UI/MainContainer/RightPanel/MenuContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="PlayButton" type="Button" parent="UI/MainContainer/RightPanel/MenuContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "  NEW GAME"
icon = ExtResource("4_uwsby")
alignment = 0
expand_icon = true

[node name="ContinueButton" type="Button" parent="UI/MainContainer/RightPanel/MenuContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "  CONTINUE"
icon = ExtResource("4_uwsby")
alignment = 0
expand_icon = true

[node name="LevelSelectButton" type="Button" parent="UI/MainContainer/RightPanel/MenuContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "  LEVEL SELECT"
icon = ExtResource("5_uvwf2")
alignment = 0
expand_icon = true

[node name="OptionsButton" type="Button" parent="UI/MainContainer/RightPanel/MenuContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "  SETTINGS"
icon = ExtResource("6_youui")
alignment = 0
expand_icon = true

[node name="CreditsButton" type="Button" parent="UI/MainContainer/RightPanel/MenuContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "  CREDITS"
icon = ExtResource("7_58pe3")
alignment = 0
expand_icon = true

[node name="QuitButton" type="Button" parent="UI/MainContainer/RightPanel/MenuContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "  QUIT GAME"
icon = ExtResource("8_g6r01")
alignment = 0
expand_icon = true

[node name="BottomContainer" type="HBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -60.0
offset_right = 1280.0
grow_vertical = 0

[node name="VersionLabel" type="Label" parent="UI/BottomContainer"]
modulate = Color(0.6, 0.6, 0.6, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Glitch Dimension v1.0.0"
vertical_alignment = 2

[node name="Spacer" type="Control" parent="UI/BottomContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="WebInfo" type="Label" parent="UI/BottomContainer"]
modulate = Color(0.7, 0.7, 0.7, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "WASD + Space to Move  •  F to Change Dimensions  •  ESC to Pause"
horizontal_alignment = 2
vertical_alignment = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_1")
}
